--- a/19-07-24/my-live-notes-app/templates/list.html
+++ b/19-07-24/my-live-notes-app/templates/list.html
@@ -1,36 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Notes App | Notes List</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg bg-success" data-bs-theme="dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">Notes App</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
-          <li class="nav-item">
-            <a class="nav-link" href="/">search notes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/list">all notes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/create">new notes</a>
-          </li>
-        </ul>
-        <div class="d-flex " role="search">
-          <span>Welcome Maheswaran!!!</span><button class="btn btn-danger">logout</button>
-        </div>
-      </div>
-    </div>
-  </nav>
+{% extends 'master/master-logged-in.html' %}
+{% block title %}Notes List{% endblock %}
+{% block main %}  
   <h3>List of Notes</h3>
   <div class="container">
         <table class="table">
@@ -38,18 +8,33 @@
                 <tr> <th>#</th> <th>title</th> <th></th></tr>
             </thead>
             <tbody>
+                
                 {% for note in notes %}
-                <tr> <td>{{ note.id }}</td> <td>{{ note.title }}</td> 
+                <tr> <td>{{ note.sno }}</td> <td>{{ note.title }}</td> 
                     <td>
                         <a href="/view/{{ note.id }}" class="btn btn-success">view</a> 
                         <a href="/edit/{{ note.id }}" class="btn btn-warning">edit</a>
-                        <button class="btn btn-danger">delete</button>
+                        <form method="POST" action="/delete" 
+                                onsubmit="return onDelete();"
+                                style="display:inline;">
+                            <input type="hidden" name="id" value="{{ note.id }}"/>
+                            <button type="submit"
+                                class="btn btn-danger">delete</button>
+                        </form>
                     </td>
                 </tr>
                 {%  endfor  %}
             </tbody>
         </table>  
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>
+  {% endblock %} 
+  {% block script %} 
+    <script type="text/javascript">
+        function onDelete() {
+            if(!confirm('Are you sure to delete?')) {
+                return false;
+            }
+            return true;
+        }
+    </script>
+  {% endblock %}
